--- a/src/default/assets/css/_constants.sass
+++ b/src/default/assets/css/_constants.sass
@@ -34,6 +34,6 @@ $COLOR_TS_ENUM: #cc9900
 $COLOR_TS_CLASS: #4da6ff
 $COLOR_TS_PRIVATE: #808080
 
-$TOOLBAR_COLOR: #fff
-$TOOLBAR_TEXT_COLOR: #333
-$TOOLBAR_HEIGHT: 40px
+$TOOLBAR_COLOR: #f89800
+$TOOLBAR_TEXT_COLOR: #fff
+$TOOLBAR_HEIGHT: 50px
