--- a/src/default/assets/css/elements/_toolbar.sass
+++ b/src/default/assets/css/elements/_toolbar.sass
@@ -50,22 +50,22 @@
         content: ''
         display: inline-block
         width: 40px
-        height: 40px
+        height: 44px
         margin: 0 -8px 0 0
-        background-image: url(../images/widgets.png)
+        background-image: url(../images/widgets-white.png)
         background-repeat: no-repeat
         text-indent: -1024px
         vertical-align: bottom
 
         +retina
-            background-image: url(../images/widgets@2x.png)
+            background-image: url(../images/widgets@2x-white.png)
             background-size: 320px 40px
 
 .tsd-widget
     @extend %TSD_WIDGET_ICON
     display: inline-block
     overflow: hidden
-    opacity: 0.6
+    opacity: 1
     height: $TOOLBAR_HEIGHT
     transition: opacity 0.1s, background-color 0.2s
     vertical-align: bottom
@@ -116,7 +116,7 @@
 
     .tsd-select-label
         @extend %TSD_WIDGET_ICON
-        opacity: 0.6
+        opacity: 1
         transition: opacity 0.2s
 
         &:before
@@ -142,14 +142,21 @@
         list-style: none
         box-shadow: 0 0 4px rgba(#000, 0.25)
         transition: visibility 0s 0.2s, opacity 0.2s
+        color: #fff
 
         li
             @extend %TSD_WIDGET_ICON
             padding: 0 20px 0 0
             background-color: $COLOR_BACKGROUND
+            color: #717171
 
             &:before
+                background-image: url(../images/widgets.png)
                 background-position: 40px 0
+
+                +retina
+                    background-image: url(../images/widgets@2x.png)
+
 
             &:nth-child(even)
                 background-color: $COLOR_PANEL
