--- a/src/default/assets/css/layouts/_minimal.sass
+++ b/src/default/assets/css/layouts/_minimal.sass
@@ -2,6 +2,9 @@ html.minimal
     .container
         margin: 0
 
+        .container-main
+            margin-top: 30px
+
     .container-main
         padding-top: 50px
         padding-bottom: 0
@@ -21,7 +24,7 @@ html.minimal
         bottom: 0
         width: 300px
         padding: 20px
-        margin: 0
+        margin: 30px 0 0 0
 
     .tsd-member .tsd-member
         margin-left: 0
